# terrain-renderer

./: .gitignore  CMakeLists.txt  README.md  helloworld.cpp  view_and_proj_matrices.md
include/: camera.hpp  hello_triangle.h  hello_triangle.hpp  mesh.hpp  shader.h  shader.hpp  terrain_renderer.h  terrain_renderer.hpp
include/glad/: glad.h
lib/: glfw3.lib
src/: camera.cpp  glad.c  hello_triangle.cpp  helloworld.cpp  main.cpp  mesh.cpp  shader.cpp  terrain_renderer.cpp  terrain_shader.fs  triangle_shader.fs  triangle_shader.vs
